--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -22,41 +22,7 @@
 		<converter:DataGridLengthToGridLengthConverter x:Key="LengthConverter"/>
 		<converter:NullToStringConverter x:Key="NullToStringConverter"/>
 		<converter:DateConverter x:Key="DateConverter"/>
-		<SolidColorBrush x:Key="PrimaryColor" Color="#5685c0"/> 
     </Window.Resources>
-
-	<Window.Styles>
-		<Style Selector="TextBlock.Title1">
-            <Setter Property="Margin" Value="1"/>
-            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-			<Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="Background" Value="White"/>
-			<Setter Property="TextWrapping" Value="Wrap"/>
-			<Setter Property="TextAlignment" Value="Center"/>
-		</Style>
-        <Style Selector="TextBlock.Title2">
-            <Setter Property="Margin" Value="1"/>
-			<Setter Property="Padding" Value="5"/>
-            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-			<Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="Background" Value="White"/>
-			<Setter Property="TextWrapping" Value="Wrap"/>
-			<Setter Property="TextAlignment" Value="Left"/>
-		    <Setter Property="TextTrimming" Value="WordEllipsis"/>
-        </Style>
-		<Style Selector="TextBlock.Title3">
-            <Setter Property="Margin" Value="1"/>
-            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-			<Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="Background" Value="White"/>
-			<Setter Property="TextWrapping" Value="Wrap"/>
-			<Setter Property="TextAlignment" Value="Center"/>
-		    <Setter Property="TextTrimming" Value="None"/>
-        </Style>
-		<Style Selector="DataGridRow:selected TextBox">
-			<Setter Property="Foreground" Value="Black"/>
-		</Style>
-	</Window.Styles>
 
     <Design.DataContext>
         <vm:Form_12VM/>
@@ -72,14 +38,13 @@
 				<RowDefinition Height="Auto"></RowDefinition>
 			</Grid.RowDefinitions>
 			
-			<CheckBox Grid.Row ="0" Height="30" Margin="5" IsChecked ="{Binding IsHeaderExpanded}">Раскрыть/Скрыть верхнюю панель</CheckBox>
+			<CheckBox Classes="hideButton" Grid.Row ="0" IsChecked ="{Binding IsHeaderExpanded}">Раскрыть/Скрыть верхнюю панель</CheckBox>
 			
-			<WrapPanel
+			<WrapPanel Classes="header"
 				Grid.Row ="1"
-				Orientation ="Horizontal"
 				IsVisible="{Binding IsHeaderExpanded}">
 					
-				<Border Margin="5" BorderBrush ="Black" BorderThickness ="1" CornerRadius ="5">
+				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions ="*,*,*,*,*">
 						<Grid ColumnDefinitions="*,*"  Grid.Row="0">
 							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
@@ -111,7 +76,7 @@
 					</Grid>
 				</Border>
 
-				<Border Margin="5" BorderBrush="Black" BorderThickness="1" CornerRadius="5">
+				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
 						<TextBlock Grid.Row="0" Grid.Column="0" Margin="5" >ФИО исполнителя:</TextBlock>
 						<TextBox Grid.Row="0" Grid.Column="1" Margin="5"  IsReadOnly="True"
@@ -128,13 +93,11 @@
 						<Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Click="CopyExecutorData_Click">Скопировать данные предыдущей формы</Button>
 					</Grid>
 				</Border>
-				<Button Height="30" Margin="5" Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
-				
-				
+				<Button Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
 			</WrapPanel>
 			
 
-			<ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+			<ScrollViewer Classes="tableScrollViewer" Grid.Row="2">
 				<Grid RowDefinitions="Auto,*" ColumnDefinitions="Auto">
 					<Grid.ContextMenu>
 						<ContextMenu>
@@ -170,280 +133,195 @@
 									  HotKey="Ctrl+L"/>
 						</ContextMenu>
 					</Grid.ContextMenu>
-					<Grid Grid.Row="0" 
-						Margin="5"
+					<Grid Classes="tableHeader" Grid.Row="0" 
 						  Width="{Binding ElementName=dataGrid.Width}">
 						<interactivity:Interaction.Behaviors>
 							<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
 						</interactivity:Interaction.Behaviors>
-						<Border Grid.Column="0" Grid.ColumnSpan="1"
-								BorderThickness="1" BorderBrush="Black"
-								Margin="-1,0,0,0">
-							<TextBlock TextAlignment="Center" TextWrapping="WrapWithOverflow"></TextBlock>
+						<Border Grid.Column="0" Grid.ColumnSpan="1">
+							<TextBlock></TextBlock>
 						</Border>
-						<Border Grid.Column="1" Grid.ColumnSpan="2"
-								BorderThickness="1" BorderBrush="Black"
-								Margin="-1,0,0,0">
-							<TextBlock TextAlignment="Center" TextWrapping="WrapWithOverflow">Сведения об операции</TextBlock>
+						<Border Grid.Column="1" Grid.ColumnSpan="2">
+							<TextBlock>Сведения об операции</TextBlock>
 						</Border>
-						<Border Grid.Column="3" Grid.ColumnSpan="7"
-							BorderThickness="1" BorderBrush="Black"
-							Margin="-1,0,0,0">
-							<TextBlock  TextAlignment="Center" TextWrapping="WrapWithOverflow">Сведения из паспорта на изделие из обездненного урана</TextBlock>
+						<Border Grid.Column="3" Grid.ColumnSpan="7">
+							<TextBlock>Сведения из паспорта на изделие из обездненного урана</TextBlock>
 						</Border>
-						<Border Grid.Column="10" Grid.ColumnSpan="2"
-								BorderThickness="1" BorderBrush="Black"
-								Margin="-1,0,0,0">
-							<TextBlock TextAlignment="Center" TextWrapping="WrapWithOverflow">Право собственности на ИОУ</TextBlock>
+						<Border Grid.Column="10" Grid.ColumnSpan="2">
+							<TextBlock>Право собственности на ИОУ</TextBlock>
 						</Border>
-						<Border Grid.Column="12" Grid.ColumnSpan="3"
-								BorderThickness="1" BorderBrush="Black"
-								Margin="-1,0,0,0">
-							<TextBlock TextAlignment="Center" TextWrapping="WrapWithOverflow">Документ</TextBlock>
+						<Border Grid.Column="12" Grid.ColumnSpan="3">
+							<TextBlock>Документ</TextBlock>
 						</Border>
-						<Border Grid.Column="15" Grid.ColumnSpan="2"
-								BorderThickness="1" BorderBrush="Black"
-								Margin="-1,0,0,0">
-							<TextBlock TextAlignment="Center" TextWrapping="WrapWithOverflow">Код ОКПО</TextBlock>
+						<Border Grid.Column="15" Grid.ColumnSpan="2">
+							<TextBlock>Код ОКПО</TextBlock>
 						</Border>
-						<Border Grid.Column="17" Grid.ColumnSpan="3" 
-								BorderThickness="1" BorderBrush="Black"
-								Margin="-1,0,0,0">
-							<TextBlock TextAlignment="Center" TextWrapping="WrapWithOverflow">Прибор (установка), УКТ или иная упаковка</TextBlock>
+						<Border Grid.Column="17" Grid.ColumnSpan="3">
+							<TextBlock>Прибор (установка), УКТ или иная упаковка</TextBlock>
 						</Border>
 					</Grid>
 					<DataGrid Grid.Row="1"
+						Classes="table"
 						x:Name="dataGrid"
 						Items="{Binding FormList}"
-						CanUserResizeColumns="True"
-						RowBackground="White"
-						AlternatingRowBackground="LightBlue"
-						Margin="5,0,5,5"
-						SelectedItem="{Binding SelectedForm}"
-						SelectionMode="Extended"
-						GridLinesVisibility="Vertical"
-						CanUserSortColumns="False"
-						IsReadOnly="False"
-						>
+						SelectedItem="{Binding SelectedForm}">
 						<interactivity:Interaction.Behaviors>
 							<local:DataGridSelectedItemsBehavior
 								SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
 						<DataGrid.Columns>
-							<DataGridTextColumn Width="Auto"
-												MinWidth="60"
-												Header="№ п/п"
+							<DataGridTextColumn Header="№ п/п"
 												Binding="{Binding NumberInOrder.Value, Mode=OneWay}"/>
 							
-							<DataGridTemplateColumn 
-												Header="код" 
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="код">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding OperationCode.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 							
-							<DataGridTemplateColumn Header="дата" Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="дата">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<CalendarDatePicker
-											Margin="3"
-											SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"
-											HorizontalAlignment="Stretch"
-											VerticalAlignment="Center"/>
+										<CalendarDatePicker SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 							
-							<DataGridTemplateColumn
-												Header="номер паспорта"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="номер паспорта">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding PassportNumber.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="наименование"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="наименование">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding NameIOU.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="номер"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="номер">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding FactoryNumber.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 							
-							<DataGridTemplateColumn
-												Header="масса обедненного урана, кг"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="масса обедненного урана, кг">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding Mass.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding Mass.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="код ОКПО изготовителя"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="код ОКПО изготовителя">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 							
-							<DataGridTemplateColumn Header="дата выпуска" Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="дата выпуска">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<CalendarDatePicker
-											SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"
-											HorizontalAlignment="Stretch"
-											VerticalAlignment="Center"/>
+										<CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
 							<DataGridTemplateColumn
-												Header="НСС, мес"
-												Width="Auto"
-												MinWidth="60">
+												Header="НСС, мес">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="код формы собственности"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="код формы собственности">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding PropertyCode.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="код ОКПО правообладателя"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="код ОКПО правообладателя">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding Owner.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding Owner.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="вид"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="вид">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding DocumentVid.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="номер"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="номер">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding DocumentNumber.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 							
-							<DataGridTemplateColumn Header="дата" Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="дата">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<CalendarDatePicker
-											SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay}"
-											HorizontalAlignment="Stretch"
-											VerticalAlignment="Center"/>
+										<CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="поставщика или получателя"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="поставщика или получателя">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="перевозчика"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="перевозчика">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="наименование"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="наименование">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding PackName.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="тип"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="тип">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding PackType.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
 
-							<DataGridTemplateColumn
-												Header="номер"
-												Width="Auto"
-												MinWidth="60">
+							<DataGridTemplateColumn Header="номер">
 								<DataGridTemplateColumn.CellTemplate>
 									<DataTemplate>
-										<TextBox Margin="3" Text="{Binding PackNumber.Value, Mode=TwoWay}"></TextBox>
+										<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"></TextBox>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
 							</DataGridTemplateColumn>
@@ -451,9 +329,11 @@
 					</DataGrid>
 				</Grid>
 			</ScrollViewer>
-			<Grid	Grid.Row="3" Background="{StaticResource PrimaryColor}" Margin="5"
-				RowDefinitions="Auto,Auto"
-				ColumnDefinitions="Auto,Auto,Auto,Auto">
+			
+			<Grid Grid.Row="3" 
+				  Classes="pageControlContainer"
+				  RowDefinitions="Auto,Auto"
+				  ColumnDefinitions="Auto,Auto,Auto,Auto">
 				<TextBlock Text="Текущая страница"
 					Grid.Row="0" Grid.Column="0" Margin="5"/>
 				<NumericUpDown Value="{Binding CurrentPage}" Minimum="1" 
@@ -475,20 +355,13 @@
 					Grid.Row="1" Grid.Column="2" Margin="5"/>
 				<TextBlock Text="{Binding TotalRows}"
 					Grid.Row="1" Grid.Column="3" Margin="5"/>
-				
 			</Grid>
 					
 				
-			<StackPanel Grid.Row="4" HorizontalAlignment="Left" Background="{StaticResource PrimaryColor}" Margin="5">
+			<StackPanel Grid.Row="4" Classes="notesContainer">
 				<TextBlock Margin="5">Примечания</TextBlock>
-				<DataGrid 
-					Width="512"
-					MaxHeight="175"
-					Items="{Binding NoteList}"
-					CanUserResizeColumns="True"
-					RowBackground="White"
-					AlternatingRowBackground="LightBlue"
-					Margin="5">
+				<DataGrid Classes="notesTable"
+					Items="{Binding NoteList}">
 					<DataGrid.Columns>
 						<DataGridTextColumn Header="№ строки"
 											Binding="{Binding RowNumber.Value, Converter={StaticResource NullToStringConverter}}"/>
