--- a/Client_App/Views/Calculator/CategoryCalculator.axaml
+++ b/Client_App/Views/Calculator/CategoryCalculator.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Client_App.ViewModels.Calculator"
         xmlns:m="clr-namespace:Models.DTO;assembly=Models"
+        xmlns:converter="clr-namespace:Client_App.Resources.CustomConverters"
         xmlns:converterType="clr-namespace:Client_App.Resources.ConverterType"
         mc:Ignorable="d" 
         x:Class="Client_App.Views.Calculator.CategoryCalculator"
@@ -19,6 +20,17 @@
     <Design.DataContext>
         <vm:CategoryCalculatorVM/>
     </Design.DataContext>
+
+    <Window.Resources>
+        <converter:BoolInverterConverter x:Key="BoolInverterConverter"/>
+    </Window.Resources>
+
+    <Window.Styles>
+        <Style Selector="DataGridCell:focus-within">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
+        </Style>
+    </Window.Styles>
 
     <Grid
         ColumnDefinitions="0.4*,0.6*"
@@ -255,7 +267,7 @@
                     <DataGrid.Columns>
                         <DataGridTextColumn
                             x:DataType="m:CalculatorRadionuclidDTO"
-                            Width="0.4*"
+                            Width="0.3*"
                             Header="Радионуклид"
                             IsReadOnly="True"
                             Binding="{Binding Path=Name}"/>
@@ -266,9 +278,10 @@
                             IsReadOnly="True"
                             Binding="{Binding Path=Abbreviation}"/>
                         <DataGridTextColumn
-                            x:DataType="m:CalculatorRadionuclidDTO"
-                            Width="0.3*"
+                            Width="0.4*"
+                            MinWidth="60"
                             Header="Активность, Бк"
+                            IsVisible="{Binding IsSingleActivity, Converter={StaticResource BoolInverterConverter}}"
                             Binding="{Binding Path=Activity, Mode=TwoWay}"/>
                     </DataGrid.Columns>
                 </DataGrid>
@@ -277,17 +290,48 @@
                     Grid.ColumnSpan="3" 
                     Grid.Row="4" 
                     ColumnDefinitions="*,*" 
-                    RowDefinitions="*,*,*,*,*">
+                    RowDefinitions="*,*,*,*,*,*,*">
                     <TextBlock
                         Grid.Column="0"
                         Grid.Row="0"
                         Margin="5"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
+                        Text="Раздельная активность"/>
+                    <CheckBox
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        Margin="5"
+                        IsThreeState="False"
+                        IsChecked="{Binding IsSingleActivity, Converter={StaticResource BoolInverterConverter}, Mode=TwoWay}"
+                        VerticalAlignment="Center"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        IsVisible="{Binding IsSingleActivity}"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        Text="Активность"/>
+                    <TextBox
+                        Grid.Column="1"
+                        Grid.Row="1"
+                        IsVisible="{Binding IsSingleActivity}"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Left"
+                        Margin="5"
+                        Text="{Binding Activity}"
+                        VerticalAlignment="Center"/>
+                    <TextBlock
+                        Grid.Column="0"
+                        Grid.Row="2"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
                         Text="Количество"/>
                     <TextBox
                         Grid.Column="1"
-                        Grid.Row="0"
+                        Grid.Row="2"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Left"
                         Margin="5"
@@ -295,14 +339,14 @@
                         VerticalAlignment="Center"/>
                     <TextBlock
                         Grid.Column="0"
-                        Grid.Row="1"
+                        Grid.Row="3"
                         Margin="5"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         Text="Отношение A/D"/>
                     <TextBox
                         Grid.Column="1"
-                        Grid.Row="1"
+                        Grid.Row="3"
                         IsReadOnly="True"
                         HorizontalAlignment="Stretch"
                         HorizontalContentAlignment="Left"
@@ -311,14 +355,14 @@
                         VerticalAlignment="Center"/>
                     <TextBlock
                         Grid.Column="0"
-                        Grid.Row="2"
+                        Grid.Row="4"
                         Margin="5"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         Text="Категория ЗРИ"/>
                     <TextBox
                         Grid.Column="1"
-                        Grid.Row="2"
+                        Grid.Row="4"
                         ContextMenu="{x:Null}"
                         IsHitTestVisible="False"
                         IsReadOnly="True"
@@ -330,7 +374,7 @@
                     <TextBlock
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Grid.Row="3"
+                        Grid.Row="5"
                         Foreground="Red"
                         HorizontalAlignment="Center"
                         Margin="5"
@@ -338,13 +382,13 @@
                         Text="{Binding CategoryText}"/>
                     <Button
                         Grid.Column="0"
-                        Grid.Row="4"
+                        Grid.Row="6"
                         Click="OnCalculateButtonClicked"
                         Content="Рассчитать"
                         Margin="0,5,5,0"/>
                     <Button
                         Grid.Column="1"
-                        Grid.Row="4"
+                        Grid.Row="6"
                         Click="OnCloseButtonClicked"
                         Content="Закрыть"
                         Margin="5,5,0,0"/>
