--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -413,9 +413,11 @@
 				<TextBlock Text="Текущая страница"
 					Grid.Row="0" Grid.Column="0" Margin="5"/>
 				<NumericUpDown Value="{Binding CurrentPage}" Minimum="1" 
-					Grid.Row="0" Grid.Column="1" Margin="5"
-					TextInput="TextBox_TextInput" 
-					KeyDown="TextBox_PreviewKeyDown"/>
+					Grid.Row="0" Grid.Column="1" Margin="5">
+					<interactivity:Interaction.Behaviors>
+						<local:NumericUpDownDigitValidationBehavior/>
+					</interactivity:Interaction.Behaviors>
+				</NumericUpDown>
 				<TextBlock Text ="Кол-во страниц:"
 					Grid.Row="0" Grid.Column="2" Margin="5"/>
 				<TextBlock Text="{Binding TotalPages}"
@@ -423,9 +425,11 @@
 				<TextBlock Text="Кол-во строчек на странице"
 					Grid.Row="1" Grid.Column="0" Margin="5"/>
 				<NumericUpDown Value="{Binding RowCount}" Minimum="1" 
-					Grid.Row="1" Grid.Column="1" Margin="5"
-					TextInput="TextBox_TextInput" 
-					KeyDown="TextBox_PreviewKeyDown"/>
+					Grid.Row="1" Grid.Column="1" Margin="5">
+					<interactivity:Interaction.Behaviors>
+						<local:NumericUpDownDigitValidationBehavior/>
+					</interactivity:Interaction.Behaviors>
+				</NumericUpDown>
 				
 				<TextBlock Text="Всего строчек:"
 					Grid.Row="1" Grid.Column="2" Margin="5"/>
