fix bug in category calculator

--- a/Client_App/Views/Calculator/CategoryCalculator.axaml
+++ b/Client_App/Views/Calculator/CategoryCalculator.axaml
@@ -413,7 +413,7 @@
                                  IsReadOnly="True"
                                  HorizontalAlignment="Stretch"
                                  Margin="5"
-                                 Text="{Binding Category}"
+                                 Text="{Binding Category, Mode=TwoWay}"
                                  VerticalAlignment="Center"/>
 
                         <!-- 4 ряд: текст категории -->
