--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -101,16 +101,44 @@
 
 			<ScrollViewer Classes="tableScrollViewer" Grid.Row="2">
 				<Grid RowDefinitions="Auto,*" ColumnDefinitions="Auto">
-					<Grid.ContextMenu>
-						<ContextMenu>
-							<MenuItem Header="Выделить всё"
-									  Command="{Binding SelectAll}"/>
-							<MenuItem Header="Добавить строку" 
-									  Command="{Binding AddRow}"/>
-							<MenuItem Header="Добавить N строк" 
-									  Command="{Binding AddRows}"/>
-						</ContextMenu>
-					</Grid.ContextMenu>
+                    <Grid.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Выделить всё				Ctrl+A"
+                                      Command="{Binding SelectAll}"
+                                      HotKey="Ctrl+A"/>
+                            <MenuItem Header="Добавить строку			Ctrl+T"
+                                      Command="{Binding AddRow}"
+                                      HotKey="Ctrl+T"/>
+                            <MenuItem Header="Добавить N строк			Ctrl+N"
+                                      Command="{Binding AddRows}"
+                                      HotKey="Ctrl+N"/>
+                            <MenuItem Header="Добавить N строк перед	Ctrl+I"
+                                      Command="{Binding AddRowsIn}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      HotKey="Ctrl+I"/>
+                            <MenuItem Header="Копировать				Ctrl+C"
+                                      Command="{Binding CopyRows}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      HotKey="Ctrl+C"/>
+                            <MenuItem Header="Вставить					Ctrl+V"
+                                      Command="{Binding PasteRows}"
+                                      HotKey="Ctrl+V"/>
+                            <MenuItem Header="Удалить выбранные строчки	Ctrl+D"
+                                      Command="{Binding DeleteRows}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      HotKey="Ctrl+D"/>
+                            <MenuItem Header="Выставить номер			Ctrl+O"
+                                      Command="{Binding SetNumberOrder}"
+                                      HotKey="Ctrl+O"/>
+                            <MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
+                                      Command="{Binding SortForms}"
+                                      HotKey="Ctrl+L"/>
+                            <MenuItem Header="Очистить строчки	        Ctrl+K"
+                                      Command="{Binding DeleteDataInRows}"
+                                      CommandParameter="{Binding SelectedForms}"
+                                      HotKey="Ctrl+K"/>
+                        </ContextMenu>
+                    </Grid.ContextMenu>
                     <Grid Classes="tableHeader" Grid.Row="0"
                           Width="{Binding ElementName=dataGrid.Width}" 
                           RowDefinitions="Auto,Auto">
